# cpu-renderer

./: .gitignore  CMakeLists.txt  README.md  report.txt
example/: config copy.yaml  config-pbr.yaml  config.yaml  default-config.yaml
example/models/Grand_Narukami_Shrine-pbr/: Grand_Narukami_Shrine.mtl
example/models/aether/: aether.mtl
example/models/cube/: cube.mtl
example/models/keqing/: keqing.mtl
example/models/scene1-pbr/: scene1.mtl
example/models/scene2-pbr/: scene2.mtl
include/: buffer.hpp  camera.hpp  config.hpp  global.hpp  light.hpp  scene.hpp  texture.hpp
include/effects/: bloom.hpp  msaa.hpp  outline.hpp  rimlight.hpp  ssao.hpp
include/geometry/: material.hpp  object.hpp  shape.hpp  triangle.hpp  vertex.hpp
include/light/: light.hpp
include/scene/: camera.hpp  material.hpp  scene.hpp
include/shader/: fragment_shader.hpp  vertex_shader.hpp
include/texture/: buffer.hpp  mipmap.hpp  texture.hpp
include/utils/: buffer.hpp  functions.hpp  gamma_correction.hpp  omp_locker.hpp  progress_bar.hpp  timer.hpp  transform.hpp
src/: buffer.cpp  camera.cpp  config.cpp  light.cpp  main.cpp
src/effects/: outline.cpp
src/geometry/: material.cpp  object.cpp  shape.cpp  triangle.cpp  vertex.cpp
src/light/: light.cpp
src/scene/: camera.cpp  light.cpp
src/shader/: fragment_shader.cpp  vertex_shader.cpp
src/utils/: gamma_correction.cpp  omp_locker.cpp  progress_bar.cpp  timer.cpp  transform.cpp
